--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
     "selectric": "^1.13.0",
     "simpleweather": "^3.1.0",
     "sticky-kit": "^1.1.3",
-    "summernote": "^0.8.11",
+    "summernote": "^0.8.16",
     "sweetalert": "^2.1.2",
     "tooltip.js": "^1.3.1",
     "weathericons": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
